feat: Update dependencies and normalize imports
Updates framer-motion and react dependencies to consistent versions across package.json and index.html.
Refactors firebase.ts to use modular SDK imports and ensures singleton initialization.
Removes unnecessary comment in index.html.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     "react": "https://esm.sh/react@19.0.0",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "framer-motion": "https://esm.sh/framer-motion@12.0.0",
+    "framer-motion": "https://esm.sh/framer-motion@11.11.17",
     "lucide-react": "https://esm.sh/lucide-react@0.475.0",
     "firebase/app": "https://esm.sh/firebase@11.3.1/app",
     "firebase/firestore": "https://esm.sh/firebase@11.3.1/firestore",
@@ -39,7 +39,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <!-- O script abaixo garante que o entrypoint do React seja carregado -->
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
