--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         background-color: #09090b;
         color: #fafafa;
         margin: 0;
+        overflow-x: hidden;
       }
       #root { min-height: 100vh; }
+      ::selection { background: #4f46e5; color: white; }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
@@ -36,7 +38,7 @@
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
